# VNC-client

./: Cargo.toml  \  settings.json
src/: key.rs  main.rs  random_code.rs  settings.rs
src/gui/: mod.rs
src/websocket/: mod.rs  read.rs
