[package]
name = "tokio_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-channel = "1.8.0"
async-mutex = "1.4.0"
eframe = "0.21.3"
futures-util = "0.3.27"
image = "0.24.5"
lazy_static = "1.4.0"
rand = "0.8.5"
rdev = "0.5.2"
reqwest = "0.11.16"
scrap = "0.4.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full","net","sync","rt"] }
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"]}
tungstenite = "0.18.0"
